src/golden/objects/errors/test.golden/duplerror.fl
	object Duplicate
		ctor init
		
	object Duplicate
		ctor fred
		
	object DuplicateCtor
		ctor fred
		ctor fred
